17 -- wip: upgrade to laxar 2: infrastructure

--- a/default.theme/laxar-accordion-widget.html
+++ b/default.theme/laxar-accordion-widget.html
@@ -1,11 +1,10 @@
-<div data-ax-accordion="{ header: '> div > div:first-child', heightStyle: 'content' }"
-     data-ax-accordion-on-before-activate="model.onBeforeActivate( index )"
-     data-ax-accordion-selected-panel="model.selectedPanel">
+<div ax-accordion="{ header: '> div > div:first-child', heightStyle: 'content' }"
+     ax-accordion-on-before-activate="model.onBeforeActivate( index )"
+     ax-accordion-selected-panel="model.selectedPanel">
 
-   <div data-ng-repeat="panel in model.panels"
-        class="ax-accordion-group">
-      <div data-ng-class="panel.classes" data-ng-bind-html="panel.htmlLabel"></div>
-      <div data-ax-widget-area
-           data-ax-widget-area-binding="panel.areaName"></div>
+   <div ng-repeat="panel in model.panels" class="ax-accordion-group">
+      <div ng-class="panel.classes" ng-bind-html="panel.htmlLabel"></div>
+      <div ax-widget-area
+           ax-widget-area-binding="panel.areaName"></div>
    </div>
 </div>
